--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "date-fns": "^3.2.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
+    "react-calendar-timeline": "^0.28.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1"
   },
